exports[`operations/lookupRecord.ts`] = `/*
 * Dictionary Ref Demo
 *
 * A sample API that uses a ref for something C# could inline
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, RequestOpts, ResponseArgs, throwIfNullOrUndefined, encodeURI, RequestConversion, StandardResponse, TransformRequest } from '@principlestudios/openapi-codegen-typescript';
import {
    _Record,
} from './../models/_Record';

export type RequestParams = {
};
export type RequestBodies = {
    'application/json': _Record;
};

export type StructuredResponses = {
    200: {
        'application/json': _Record;
    };
};
export type Responses = 
    | StandardResponse<200, 'application/json', _Record>;

export function lookupRecord<K extends keyof RequestBodies>(params: RequestParams, body: RequestBodies[K], mimeType: K): RequestOpts;
export function lookupRecord(params: RequestParams, body: RequestBodies[keyof RequestBodies] | null = null, mimeType: keyof RequestBodies | null = null): RequestOpts {
    throwIfNullOrUndefined(params, 'params');
    throwIfNullOrUndefined(body, 'body');
    throwIfNullOrUndefined(mimeType, 'mimeType');

    const headers: HttpHeaders = {};
    if (mimeType) headers['Content-Type'] = mimeType;

    return {
        path: '/address',
        method: 'POST',
        headers,
        body,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as Responses;

export const conversion: RequestConversion<RequestParams, RequestBodies, Responses, 'body'> = {
    request: lookupRecord,
    response: responseConversion,
};

`;

exports[`operations/index.ts`] = `/*
 * Dictionary Ref Demo
 *
 * A sample API that uses a ref for something C# could inline
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { conversion as lookupRecord } from './lookupRecord';

export default {
    lookupRecord,
} as const;
`;

exports[`models/_Record.ts`] = `/*
 * Dictionary Ref Demo
 *
 * A sample API that uses a ref for something C# could inline
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 * @interface _Record
 */
export type _Record = {
};
`;

